CuBoulder/tiamat-theme#653 Adds styling for mobile menu

--- a/templates/regions/region--primary-menu.html.twig
+++ b/templates/regions/region--primary-menu.html.twig
@@ -15,7 +15,7 @@
 <div class="ucb-primary-menu-region-container{{ ucb_secondary_menu_position == 'above' ? ' container' : '' }}">
   <nav class="ucb-main-menu">
     <div class="ucb-mobile-menu-button-div">
-      <button id="ucb-mobile-menu-toggle" aria-label="Toggle menu">☰</button>
+      <button id="ucb-mobile-menu-toggle" aria-label="Toggle menu"><i class="fa-solid fa-bars"></i></button>
     </div>
     <div class="ucb-primary-menu-region">
       {{ content }}
