--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -11,6 +11,10 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .ucb-menu .ucb-menu {
+    display: block;
+  }
+
   .ucb-mobile-menu-button-div {
     line-height: 2em;
   }
@@ -51,9 +55,17 @@
 
   #ucb-mobile-menu-toggle {
     display: block;
-    max-width: 100px;
-    font-size: 2em;
-    margin-left: auto;
+    color: #000;
+    font-size: 1.5em;
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    margin: 0 auto;
+    padding: 0;
+  }
+
+  #ucb-mobile-menu-toggle svg {
+    margin-top: .25em;
   }
 
   .ucb-menu,
@@ -65,30 +77,27 @@
     display: none;
   }
 
-  .ucb-menu.open {
+  .ucb-main-nav-container .ucb-menu,
+  .ucb-main-nav-container .ucb-menu .menu-item {
     display: flex;
     flex-direction: column;
   }
 
-  .ucb-menu .menu-item {
-    border-bottom: 1px solid lightgrey;
+  .ucb-main-nav-container .ucb-menu .menu-item {
+    border-bottom: 1px solid rgba(0, 0, 0, .09);
   }
 
-  .ucb-menu.open .menu-item a {
-    font-weight: 300;
-    font-size: 16px;
-    padding-left: 16px;
-    border-bottom: 2px solid transparent;
+  .ucb-main-nav-container .ucb-menu .ucb-menu .menu-item {
+    border-bottom: none;
   }
 
-  .ucb-menu .menu-item.active {
-    font-weight: 600;
+  .ucb-main-nav-container .ucb-menu .menu-item .nav-link {
+    padding: 10px 10px 10px var(--ucb-menu-indent-start);
+  }
+
+  .ucb-main-nav-container .ucb-menu .menu-item.active a.nav-link.is-active {
     color: #000;
-    background-color: #cfb87c;
-  }
-
-  .ucb-menu.open .menu-item.active a {
-    border-bottom: 2px solid transparent;
+    background-color: var(--ucb-gold);
   }
 
   .ucb-mobile-footer-menu {
@@ -102,12 +111,14 @@
   .ucb-main-nav-container .ucb-primary-menu-region li.menu-item a.nav-link,
   .ucb-main-nav-container .ucb-primary-menu-region li.menu-item.active a.nav-link.is-active,
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item a.nav-link,
-  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a.nav-link {
+  .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item a.nav-link,
+  .ucb-main-menu li.menu-item a.nav-link:hover,
+  .ucb-main-menu li.menu-item a.nav-link.is-active,
+  .ucb-main-menu li.menu-item.active a.nav-link:first-of-type {
     color: #000;
-    line-height: 2rem;
-    font-weight: normal;
+    line-height: 1.2em;
     border-bottom: none;
-    padding: .25rem 1rem;
+    margin: 0;
   }
 
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item:not(.active) a.nav-link,
@@ -115,9 +126,46 @@
     background-color: #FFF;
   }
 
+  .ucb-main-nav-container li.menu-item a.nav-link {
+    font-size: 1em;
+    font-weight: 600;
+  }
+
   .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .menu-item a {
     margin: 0;
     line-height: 2rem;
+  }
+
+  .ucb-main-nav-container .ucb-menu .ucb-menu li.menu-item a.nav-link {
+    font-weight: 400;
+    font-size: .9em;
+    padding: 7px 10px 7px calc(var(--ucb-menu-indent-start) + var(--ucb-menu-indent-inc) - var(--ucb-menu-indent-border-width));
+  }
+
+  .ucb-main-nav-container .ucb-menu .ucb-menu .ucb-menu li.menu-item a.nav-link {
+    padding-left: calc(var(--ucb-menu-indent-start) + var(--ucb-menu-indent-inc) * 2);
+  }
+
+  .ucb-main-nav-container .ucb-menu .ucb-menu .ucb-menu .ucb-menu li.menu-item a.nav-link {
+    padding-left: calc(var(--ucb-menu-indent-start) + var(--ucb-menu-indent-inc) * 3);
+  }
+
+  .ucb-main-nav-container .ucb-menu .ucb-menu .ucb-menu .ucb-menu .ucb-menu li.menu-item a.nav-link {
+    padding-left: calc(var(--ucb-menu-indent-start) + var(--ucb-menu-indent-inc) * 4);
+  }
+
+  .ucb-main-nav-container .ucb-menu .expanded.active>a.nav-link,
+  .ucb-main-nav-container .ucb-menu .expanded.active>.ucb-menu {
+    border-left: var(--ucb-menu-indent-border-width) solid var(--ucb-gold);
+  }
+
+  .ucb-main-nav-container .ucb-menu .ucb-menu .expanded.active>a.nav-link,
+  .ucb-main-nav-container .ucb-menu .ucb-menu .expanded.active>.ucb-menu {
+    border-left: none;
+  }
+
+  .ucb-main-nav-container .ucb-menu .expanded.active>a.nav-link {
+    padding-left: calc(var(--ucb-menu-indent-start) - var(--ucb-menu-indent-border-width));
   }
 }
 
@@ -125,12 +173,15 @@
   margin-top: 20px;
 }
 
-.ucb-page-content .ucb-menu {
-  flex-direction: column;
-  margin-bottom: 20px;
+.ucb-menu {
   --ucb-menu-indent-start: 10px;
   --ucb-menu-indent-inc: 5px;
   --ucb-menu-indent-border-width: 2px;
+}
+
+.ucb-page-content .ucb-menu {
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
 .ucb-page-content .ucb-menu .ucb-menu {
