CuBoulder/tiamat-theme#649 Fixes Layout Builder preview

--- a/templates/block/block--collection-grid.html.twig
+++ b/templates/block/block--collection-grid.html.twig
@@ -17,7 +17,7 @@
 {# JSON API Endpoint information #}
 {% set collectionsJSON = (url('<front>')|render|trim('/'))
     ~ '/jsonapi/node/collection_item_page'
-	~ '?sort=title'
+  ~ '?sort=title'
     ~ '&include=field_collection_item_thumbnail.field_media_image'
     ~ '&fields[file--file]=uri,url,alt'
   %}
@@ -31,88 +31,89 @@
 
 {% set filterItemsStyle = "collection-filter-hide" %}
 {% if content.field_collections_filter|render|striptags|trim == "Fade Items" %}
-	{% set filterItemsStyle = "collection-filter-fade" %}
+  {% set filterItemsStyle = "collection-filter-fade" %}
 {% endif %}
 
 {% set multiselectStyle = "collection-multiselect-single" %}
 {% if content.field_collections_multiselect|render|striptags|trim == "Multi Select List" %}
-	{% set multiselectStyle = "collection-multiselect-multi" %}
+  {% set multiselectStyle = "collection-multiselect-multi" %}
 {% endif %}
 
 
 {% set displayStyle = "show" %}
 {% if content.field_collections_display|render|striptags|trim == "Hide" %}
-	{% set displayStyle = "hide" %}
+  {% set displayStyle = "hide" %}
 {% endif %}
 
 {% set blockID =  elements.content['#block_content'].id() %}
 
 {{ attach_library('boulder_base/ucb-collections-block') }}
 {% block content %}
-	<div{{attributes.addClass(classes)}}>
-		{{ title_prefix }}
-		{% if label %}
-			<h2{{title_attributes}}>{{ label }}</h2>
-		{% endif %}
-		{{ title_suffix }}
+  <div{{attributes.addClass(classes)}}>
+    {{ title_prefix }}
+    {% if label %}
+      <h2{{title_attributes}}>{{ label }}</h2>
+    {% endif %}
+    {{ title_suffix }}
+    <collection-grid>
+      <div class="collection-grid-container collection-grid-container-{{blockID}} {{filterItemsStyle}} {{multiselectStyle}}" data-blockid = {{blockID}}>
+        <div
+          class="collection-filter-container">
+          {# Single Select List #}
+          {% if multiselectStyle == "collection-multiselect-single" %}
+            <div class="collections-filter-list">
+              {% for key, item in content['#block_content'].field_collection_category_select %}
+                {%  if key|first != '#' %}
+                  <div class="collection-grid-filters">
+                    <h3 class="category-filter-label">{{item.entity.field_collection_filter_label.value }}
+                    </h3>
+                    <div class="collection-category-container">
+                      <div class="collection-filter-links">
+                        <button class="category-single-button category-single-button-all-{{ blockID }}" onclick="resetSingleFilters({{ blockID }})">All</button>
+                        {% for key, cat in item.entity.field_collection_grid_category %}
+                          {%  if key|first != '#' %}
+                            <button class="category-single-button collection-grid-no-display category-label-reset-{{ blockID }} category-label-{{ cat|view }}-{{ blockID }}" data-category="{{ cat|view }}" onclick="filterSingle({{ cat|view }}, {{ blockID }})"></button>
+                          {% endif %}
+                        {% endfor %}
+                      </div>
+                    </div>
+                  </div>
 
-		<div class="collection-grid-container collection-grid-container-{{blockID}} {{filterItemsStyle}} {{multiselectStyle}}" data-blockid = {{blockID}}>
-			<div
-				class="collection-filter-container">
-				{# Single Select List #}
-				{% if multiselectStyle == "collection-multiselect-single" %}
-					<div class="collections-filter-list">
-						{% for key, item in content['#block_content'].field_collection_category_select %}
-							{%  if key|first != '#' %}
-								<div class="collection-grid-filters">
-									<h3 class="category-filter-label">{{item.entity.field_collection_filter_label.value }}
-									</h3>
-									<div class="collection-category-container">
-										<div class="collection-filter-links">
-											<button class="category-single-button category-single-button-all-{{ blockID }}" onclick="resetSingleFilters({{ blockID }})">All</button>
-											{% for key, cat in item.entity.field_collection_grid_category %}
-												{%  if key|first != '#' %}
-													<button class="category-single-button collection-grid-no-display category-label-reset-{{ blockID }} category-label-{{ cat|view }}-{{ blockID }}" data-category="{{ cat|view }}" onclick="filterSingle({{ cat|view }}, {{ blockID }})"></button>
-												{% endif %}
-											{% endfor %}
-										</div>
-									</div>
-								</div>
+                {% endif %}
+              {% endfor %}
+              {#<input type="reset" value="Reset Filters" class="category-filter-reset" onclick = "resetFilters()" ></input>#}
+            </div>
+          {% elseif multiselectStyle == "collection-multiselect-multi" %}
 
-							{% endif %}
-						{% endfor %}
-						{#<input type="reset" value="Reset Filters" class="category-filter-reset" onclick = "resetFilters()" ></input>#}
-					</div>
-				{% elseif multiselectStyle == "collection-multiselect-multi" %}
+            {% for key, item in content['#block_content'].field_collection_category_select %}
+              {%  if key|first != '#' %}
+                <div class="collection-filter-links">
+                  <h3 class="category-filter-label">{{item.entity.field_collection_filter_label.value }}
+                  </h3>
+                  <div class="collection-category-container">
+                    {% for key2, cat in item.entity.field_collection_grid_category %}
+                      {%  if key2|first != '#' %}
+                        <div class="collection-category-line">
+                          <input id = "category-checkbox-{{blockID}}-{{key}}-{{key2}}" class="category-checkbox collection-grid-no-display category-checkbox-{{ blockID }}" type="checkbox" data-category="{{ cat|view }}" onclick="filterChecked({{ blockID }})">
+                          
+                          <label class="category-label category-label-{{ cat|view }}-{{ blockID }}" for ="category-checkbox-{{blockID}}-{{key}}-{{key2}}" data-category="{{ cat|view }}-label"></label>
+                        </div>
+                      {% endif %}
+                    {% endfor %}
+                  </div>
+                </div>
 
-					{% for key, item in content['#block_content'].field_collection_category_select %}
-						{%  if key|first != '#' %}
-							<div class="collection-filter-links">
-								<h3 class="category-filter-label">{{item.entity.field_collection_filter_label.value }}
-								</h3>
-								<div class="collection-category-container">
-									{% for key2, cat in item.entity.field_collection_grid_category %}
-										{%  if key2|first != '#' %}
-											<div class="collection-category-line">
-												<input id = "category-checkbox-{{blockID}}-{{key}}-{{key2}}" class="category-checkbox collection-grid-no-display category-checkbox-{{ blockID }}" type="checkbox" data-category="{{ cat|view }}" onclick="filterChecked({{ blockID }})">
-												
-												<label class="category-label category-label-{{ cat|view }}-{{ blockID }}" for ="category-checkbox-{{blockID}}-{{key}}-{{key2}}" data-category="{{ cat|view }}-label"></label>
-											</div>
-										{% endif %}
-									{% endfor %}
-								</div>
-							</div>
-
-						{% endif %}
-					{% endfor %}
-					<input type="reset" value="Reset Filters" class="category-filter-reset category-filter-reset-{{ blockID }}" onclick="resetFilters({{ blockID }})"></input>
-			{% endif %}
-		</div>
-		<div class="collection-grid-card-wrapper">
-			<div class="collection-grid-filter-checks">
-			<span class = "collection-grid-filter-span-{{ blockID }}"></span>
-			</div>
-			<div id="collections-grid-block-data-{{blockID}}" data-jsonapi="{{ collectionsJSON }}" data-jsoncats="{{ collectionsCatsJSON }}" data-extags="{{ content.field_collection_grid_type|render|striptags|trim}}" data-bodydisplay="{{ displayStyle }}" data-baseurl = {{ baseurlJSON}} class="collections-grid-block-data"></div>
-		</div>
-	</div>
+              {% endif %}
+            {% endfor %}
+            <input type="reset" value="Reset Filters" class="category-filter-reset category-filter-reset-{{ blockID }}" onclick="resetFilters({{ blockID }})"></input>
+        {% endif %}
+      </div>
+      <div class="collection-grid-card-wrapper">
+        <div class="collection-grid-filter-checks">
+        <span class = "collection-grid-filter-span-{{ blockID }}"></span>
+        </div>
+        <div id="collections-grid-block-data-{{blockID}}" data-jsonapi="{{ collectionsJSON }}" data-jsoncats="{{ collectionsCatsJSON }}" data-extags="{{ content.field_collection_grid_type|render|striptags|trim}}" data-bodydisplay="{{ displayStyle }}" data-baseurl = {{ baseurlJSON}} class="collections-grid-block-data"></div>
+      </div>
+    </collection-grid>
+  </div>
 {% endblock content %}
