--- a/templates/field/field--field-ucb-person-links.html.twig
+++ b/templates/field/field--field-ucb-person-links.html.twig
@@ -43,7 +43,7 @@
 
 						{% elseif 'TWITTER' in linkUrlUpper %}
 							<span class="sr-only">Twitter</span>
-							<i class="fa-brands fa-twitter"></i>
+							<i class="fa-brands fa-x-twitter"></i>
 							<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-twitter-link" title="Twitter" alt="Twitter">
 								<span>{{ linkTitle }}</span>
 							</a>
