--- a/templates/field/field--field_ucb_person_primary_link.html.twig
+++ b/templates/field/field--field_ucb_person_primary_link.html.twig
@@ -10,7 +10,7 @@
 			{% if item.content['#url']|render|first == '/' %}
 				<span class="sr-only">Primary Link</span>
 				<i class="fa-solid fa-link primaryLinkIcon"></i>
-				<a href="{{ item.content['#url']|render }}" class="ucb-person-social-link ucb-person-other-link" title="Social Media" alt="Social Media">
+				<a href="{{ item.content['#url']|render }}" class="ucb-person-social-link ucb-person-other-link">
 					{% if linkTitle|render %}
 						<span>{{ linkTitle }}</span>
 					{% else %}
