--- a/css/ucb-class-notes.css
+++ b/css/ucb-class-notes.css
@@ -2,6 +2,6 @@
     padding: 20px 0;
 }
 
-.ucb-class-notes-image > div > div{
+.ucb-class-notes-image .imageMediaStyle{
     margin-bottom: 20px;
 }
