--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -4,8 +4,7 @@
   --ucb-menu-indent-border-width: 2px;
 }
 
-.ucb-menu .ucb-menu,
-#ucb-mobile-menu-toggle {
+.ucb-menu .ucb-menu {
   display: none;
 }
 
@@ -43,19 +42,9 @@
     width: 100%;
   }
 
-  #ucb-mobile-menu-toggle {
+  #ucb-mobile-menu-toggle,
+  .ucb-brand-bar #ucb-mobile-menu-toggle {
     display: block;
-    color: #000;
-    font-size: 1.5em;
-    width: 100%;
-    height: 40px;
-    background-color: transparent;
-    margin: 0 auto;
-    padding: 0;
-  }
-
-  #ucb-mobile-menu-toggle svg {
-    margin-top: .25em;
   }
 
   .ucb-menu,
