--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -114,11 +114,14 @@
           <a href="https://www.colorado.edu" class="ucb-home-link">
             <img class="ucb-logo" src="https://cdn.colorado.edu/static/brand-assets/live/images/cu-boulder-logo-text-{{ campus_header_text_color }}.svg" alt="University of Colorado Boulder">
           </a>
-          {% if site_search.0 %}
-            <a class="ucb-search-link" href="{{ site_search.0.url }}">
-              <img class="ucb-search" alt="Search" src="https://cdn.colorado.edu/static/brand-assets/live/images/search-{{ campus_header_text_color }}.svg">
-            </a>
-          {% endif %}
+          <div class="ucb-brand-bar-controls">
+            {% if site_search.0 %}
+              <a class="ucb-search-link" href="{{ site_search.0.url }}">
+                <img class="ucb-search" alt="Search" src="https://cdn.colorado.edu/static/brand-assets/live/images/search-{{ campus_header_text_color }}.svg">
+              </a>
+            {% endif %}
+            <button id="ucb-mobile-menu-toggle" aria-label="Toggle menu"><i class="ucb-mobile-menu-open-icon fa-solid fa-bars"></i><i class="ucb-mobile-menu-close-icon fa-solid fa-xmark"></i></button>
+          </div>
         </div>
       </div>
     </div>
@@ -134,11 +137,6 @@
               {% if site_affiliation.url %}<a href="{{ site_affiliation.url }}">{{ site_affiliation.label }}</a>{% else %}{{ site_affiliation.label }}{% endif %}
             </div>
           {% endif %}
-        </div>
-        <div class="mobile-menu-toggle">
-          <button id="mobile-toggle" aria-haspopup="true" aria-expanded="false" aria-controls="mobile-menu" aria-label="Navigation">
-            <i class="fa-solid fa-bars" aria-hidden="true"></i>
-          </button>
         </div>
       </div>
     </header>
