--- a/css/ucb-brand-bar.css
+++ b/css/ucb-brand-bar.css
@@ -3,6 +3,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  padding: 0;
 }
 
 .ucb-brand-bar.ucb-brand-bar-white {
@@ -11,6 +12,10 @@
 
 .ucb-brand-bar.ucb-brand-bar-black {
   background-color: #000;
+}
+
+.ucb-brand-bar .ucb-home-link {
+  padding: 1rem 0;
 }
 
 .ucb-brand-bar img.ucb-logo {
@@ -28,17 +33,21 @@
   }
 }
 
+.ucb-brand-bar .ucb-brand-bar-controls {
+  display: flex;
+  flex-direction: row;
+}
+
+.ucb-brand-bar #ucb-mobile-menu-toggle,
+.ucb-brand-bar .ucb-search-link {
+  padding: 1rem .5rem;
+  padding-right: 0;
+}
+
 .ucb-brand-bar img.ucb-search {
   width: 18px;
   height: 18px;
-  margin-left: 20px;
   display: block;
-}
-
-.ucb-brand-bar-controls {
-  display: flex;
-  flex-direction: row;
-  gap: 9px;
 }
 
 .ucb-brand-bar #ucb-mobile-menu-toggle {
@@ -47,13 +56,13 @@
   background-color: transparent;
   width: 20px;
   height: 20px;
+  box-sizing: content-box;
   margin: 0;
-  padding: 0;
 }
 
 .ucb-brand-bar #ucb-mobile-menu-toggle svg {
-  width: 100%;
-  height: 100%;
+  width: 20px;
+  height: 20px;
 }
 
 .ucb-brand-bar #ucb-mobile-menu-toggle .ucb-mobile-menu-close-icon,
