vertical icon spans added

--- a/templates/field/field--field-social-media-links.html.twig
+++ b/templates/field/field--field-social-media-links.html.twig
@@ -18,6 +18,7 @@
 							<span class="icon-bg icon-bg-facebook">
 								<i class="fa-brands fa-facebook-f icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">Facebook</span>
 						</span>
 					</a>
 
@@ -28,6 +29,7 @@
 							<span class="icon-bg icon-bg-instagram">
 								<i class="fa-brands fa-instagram icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">Instagram</span>
 						</span>
 					</a>
 
@@ -38,6 +40,7 @@
 							<span class="icon-bg icon-bg-linkedin">
 								<i class="fa-brands fa-linkedin-in icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">LinkedIn</span>
 						</span>
 					</a>
 
@@ -48,6 +51,7 @@
 							<span class="icon-bg icon-bg-youtube">
 								<i class="fa-brands fa-youtube icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">YouTube</span>
 						</span>
 					</a>
 				{% elseif 'PINTREST' in formattedContent %}
@@ -57,6 +61,7 @@
 							<span class="icon-bg icon-bg-pintrest">
 								<i class="fa-brands fa-pinterest-p icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">Pintrest</span>
 						</span>
 					</a>
 				{% elseif 'FLICKR' in formattedContent %}
@@ -66,6 +71,7 @@
 							<span class="icon-bg icon-bg-flickr">
 								<i class="fa-brands fa-flickr icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">Flickr</span>
 						</span>
 					</a>
 				{% elseif 'VIMEO' in formattedContent %}
@@ -84,6 +90,7 @@
 							<span class="icon-bg icon-bg-wordpress">
 								<i class="fa-brands fa-wordpress-simple icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">WordPress</span>
 						</span>
 					</a>
 				{% elseif 'TIKTOK' in formattedContent %}
@@ -93,6 +100,7 @@
 							<span class="icon-bg icon-bg-pintrest">
 								<i class="fa-brands fa-tiktok icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">TikTok</span>
 						</span>
 					</a>
 				{% elseif 'REDDIT' in formattedContent %}
@@ -102,6 +110,7 @@
 							<span class="icon-bg icon-bg-pintrest">
 								<i class="fa-brands fa-reddit-alien icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">Reddit</span>
 						</span>
 					</a>
 
@@ -112,6 +121,7 @@
 							<span class="icon-bg icon-bg-patreon">
 								<i class="fa-brands fa-patreon icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">Patreon</span>
 						</span>
 					</a>
 
@@ -122,6 +132,7 @@
 							<span class="icon-bg icon-bg-discord">
 								<i class="fa-brands fa-discord icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">Discord</span>
 						</span>
 					</a>
 
@@ -132,6 +143,7 @@
 							<span class="icon-bg icon-bg-twitter">
 								<i class="fa-brands fa-x-twitter icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">X</span>
 						</span>
 					</a>
 
@@ -142,6 +154,7 @@
 							<span class="icon-bg icon-bg-link">
 								<i class="fa-solid fa-up-right-from-square icon-foreground"></i>
 							</span>
+							<span class="vertical-icon-span">External Link</span>
 						</span>
 					</a>
 
