fix link text for unknown links

--- a/templates/field/field--field-social-media-links.html.twig
+++ b/templates/field/field--field-social-media-links.html.twig
@@ -154,7 +154,7 @@
 							<span class="icon-bg icon-bg-link">
 								<i class="fa-solid fa-up-right-from-square icon-foreground"></i>
 							</span>
-							<span class="vertical-icon-span">External Link</span>
+							<span class="vertical-icon-span">Link</span>
 						</span>
 					</a>
 
