--- a/templates/block/block--content-row.html.twig
+++ b/templates/block/block--content-row.html.twig
@@ -33,10 +33,10 @@
 		{# Teaser Row Layout #}
 		{% if layoutSelection == 0 %}
 			{% for key, item in content['#block_content'].field_row_layout_content %}
-				{% set rowLink = item.entity.field_row_layout_content_link.0.url.uri %}
+				{% set rowLink = item.entity.field_row_layout_content_link.0.url|render %}
 				<div class="row row-content">{% set image = item.entity.field_row_layout_content_image.0 %}
 					{% if image %}
-					<div class="col-4 row-image-container">
+					<div class="col-sm-2 row-image-container">
 						{% if rowLink %}
 							<a href="{{ rowLink }} ">
 								{{ image|view }}
@@ -46,7 +46,7 @@
 						{% endif %}
 					</div>
 					{% endif %}
-					<div class="{{ image ? 'col-8 ' }}row-text-container">
+					<div class="{{ image ? 'col-sm-10 ' : 'col-sm-12' }} row-text-container">
 						{% if rowLink %}
 							<a href="{{ rowLink }} ">
 								<h3>{{ item.entity.field_row_layout_content_title.0.value }}</h3>
@@ -61,7 +61,7 @@
 			{# Teaser Alternate Row Layout #}
 		{% elseif layoutSelection == 1 %}
 			{% for key, item in content['#block_content'].field_row_layout_content %}
-				{% set rowLink = item.entity.field_row_layout_content_link.0.url.uri %}
+				{% set rowLink = item.entity.field_row_layout_content_link.0.url|render %}
 				<div class="row d-flex row-content">
 					{% if (loop.index is odd) %}{% set image = item.entity.field_row_layout_content_image.0 %}
 						{% if image %}
@@ -116,7 +116,7 @@
 			{# Tiles Row Layout #}
 		{% elseif layoutSelection == 2 %}
 			{% for key, item in content['#block_content'].field_row_layout_content %}
-				{% set rowLink = item.entity.field_row_layout_content_link.0.url.uri %}
+				{% set rowLink = item.entity.field_row_layout_content_link.0.url|render %}
 				<div class="row d-flex row-content">
 					{% if (loop.index is odd) %}
 						<div class="col-6 row-image-container">
@@ -163,9 +163,9 @@
 			{% endfor %}
 			{# Features Row Layout #}
 		{% else %}
-			<div class="row row-cols-lg-2 row-cols-1 feature-row">
+			<div class="row row-col-lg-2 row-col-1 feature-row">
 				{% for key, item in content['#block_content'].field_row_layout_content %}
-					{% set rowLink = item.entity.field_row_layout_content_link.0.url.uri %}
+					{% set rowLink = item.entity.field_row_layout_content_link.0.url|render %}
 					{% set smallFeatureBGValue = "background-image:url(#{ file_url( item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri ) });background-repeat:no-repeat;background-position:center;background-size:cover;" %}
 					{% if (loop.index0 % 3 == 0) or (loop.index0 == 0) %}
 						<div class="col-lg-7">
