wip: Adds Teaser Large

--- a/css/block/content-row.css
+++ b/css/block/content-row.css
@@ -102,6 +102,10 @@
   width: 100%;
 }
 
+.ucb-teaser-lg-row{
+  align-items: center;
+}
+
 @media screen and (max-width: 975px) {
   .small-feature-row {
     margin-top: 1em;
