--- a/templates/field/field--field_ucb_person_primary_link.html.twig
+++ b/templates/field/field--field_ucb_person_primary_link.html.twig
@@ -30,7 +30,7 @@
 
 				{% elseif 'TWITTER' in linkUrlUpper %}
 					<span class="sr-only">Twitter</span>
-					<i class="fa-brands fa-twitter primaryLinkIcon"></i>
+					<i class="fa-brands fa-x-twitter primaryLinkIcon"></i>
 					<a href="{{ linkUrl }}" class="ucb-person-social-link ucb-person-twitter-link" title="Twitter" alt="Twitter">
 						<span>{{ linkTitle }}</span>
 					</a>
