--- a/css/block/content-row.css
+++ b/css/block/content-row.css
@@ -15,7 +15,7 @@
   padding: 1.5em;
 }
 
-.row-content {
+.ucb-content-row-teaser {
   border-bottom: 2px solid rgba(128, 128, 128, 0.333);
   margin-bottom: 20px;
 }
