--- a/css/style.css
+++ b/css/style.css
@@ -278,8 +278,8 @@ section.ucb-main-nav-section {
 }
 
 @media only screen and (max-width: 600px) {
-  .ucb-main-nav-container {
-    flex-direction: column;
+  .page-header {
+    box-shadow: 0 2px 5px rgba(0 0 0 / 10%);
   }
 }
 
