--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -27,6 +27,30 @@
 }
 
 @media only screen and (max-width: 600px) {
+  section.ucb-main-nav-section.ucb-header-black {
+    color: #FFF;
+    background-color: #000;
+  }
+
+  section.ucb-main-nav-section.ucb-header-dark {
+    color: #fff;
+    background-color: #424242;
+  }
+
+  section.ucb-main-nav-section.ucb-header-light {
+    color: #111;
+    background-color: #eee;
+  }
+
+  section.ucb-main-nav-section.ucb-header-white {
+    color: #111;
+    background-color: #FFF;
+  }
+
+  section.ucb-main-nav-section {
+    box-shadow: none;
+  }
+
   .ucb-menu .ucb-menu {
     display: block;
   }
@@ -50,10 +74,6 @@
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container,
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region.ucb-secondary-menu-button-display .ucb-secondary-menu-region-container .ucb-menu {
     gap: 0;
-  }
-
-  .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region {
-    background-color: white;
   }
 
   .ucb-secondary-menu-region {
@@ -80,22 +100,24 @@
     flex-direction: column;
   }
 
-  .ucb-main-nav-container .ucb-menu .menu-item {
+  section.ucb-main-nav-section.ucb-header-black .ucb-main-nav-container .ucb-menu .menu-item,
+  section.ucb-main-nav-section.ucb-header-dark .ucb-main-nav-container .ucb-menu .menu-item {
+    border-bottom: 1px solid rgba(255, 255, 255, .18);
+  }
+
+  section.ucb-main-nav-section.ucb-header-white .ucb-main-nav-container .ucb-menu .menu-item,
+  section.ucb-main-nav-section.ucb-header-light .ucb-main-nav-container .ucb-menu .menu-item {
     border-bottom: 1px solid rgba(0, 0, 0, .09);
   }
 
-  .ucb-main-nav-container .ucb-menu .ucb-menu .menu-item {
+  section.ucb-main-nav-section .ucb-main-nav-container .ucb-menu .ucb-menu .menu-item,
+  section.ucb-main-nav-section>div>div:last-child .ucb-menu .menu-item:last-child  {
     border-bottom: none;
   }
 
   .ucb-main-nav-container .ucb-menu .menu-item a.nav-link,
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region .menu-item a.nav-link {
     padding: 10px 10px 10px var(--ucb-menu-indent-start);
-  }
-
-  .ucb-main-nav-container .ucb-menu .menu-item.active a.nav-link.is-active {
-    color: #000;
-    background-color: var(--ucb-gold);
   }
 
   .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region .ucb-menu {
@@ -109,15 +131,22 @@
   .ucb-main-menu li.menu-item a.nav-link:hover,
   .ucb-main-menu li.menu-item a.nav-link.is-active,
   .ucb-main-menu li.menu-item.active a.nav-link:first-of-type {
-    color: #000;
+    color: inherit;
     line-height: 1.2em;
+    border-radius: 0;
     border-bottom: none;
     margin: 0;
   }
 
+  .ucb-main-nav-container .ucb-primary-menu-region li.menu-item.active a.nav-link.is-active,
+  .ucb-main-nav-container .ucb-menu .menu-item.active a.nav-link.is-active {
+    color: #000;
+    background-color: var(--ucb-gold);
+  }
+
   .ucb-main-nav-container.ucb-secondary-menu-position-above .ucb-secondary-menu-region li.menu-item:not(.active) a.nav-link,
   .ucb-main-nav-container.ucb-secondary-menu-position-inline .ucb-secondary-menu-region li.menu-item:not(.active) a.nav-link {
-    background-color: #FFF;
+    background-color: transparent;
   }
 
   .ucb-main-nav-container li.menu-item a.nav-link {
