--- a/css/block/content-row.css
+++ b/css/block/content-row.css
@@ -24,6 +24,10 @@
   flex-direction: column;
   margin-bottom: 20px;
 }
+.row-text-container-tile{ 
+  padding: 80px 40px
+}
+
 .row-fill {
   display: flex;
   overflow: hidden;
@@ -108,6 +112,20 @@
   width: calc(100px + var(--bs-gutter-x));
   height: auto;
   margin-bottom: 20px;
+}
+
+.row-image-container-tile-even {
+  padding-left: 0px;
+  padding-right: calc(var(--bs-gutter-x) * .5);
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+.row-image-container-tile-odd{
+  padding-left: calc(var(--bs-gutter-x) * .5);
+  padding-right: 0px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 @media screen and (max-width: 975px) {
