--- a/templates/block/block--content-row.html.twig
+++ b/templates/block/block--content-row.html.twig
@@ -22,7 +22,6 @@
 
 {% set layoutSelection = content['#block_content'].field_row_layout_selection.value %}
 
-<p> Layout Selection : {{layoutSelection}}</p>
 {% block content %}
 	<div{{attributes.addClass(classes)}}>
 		{{ title_prefix }}
@@ -71,7 +70,7 @@
 						<div class="col-sm-5 col-xs-12 row-image-container-lg">
 							{% if rowLink %}
 								<a href="{{ rowLink }} ">
-									<img class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
+									<img alt="{{item.entity.field_row_layout_content_image.entity.field_media_image.alt}}" class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
 								</a>
 							{% else %}
 								{{ image|view }}
@@ -105,10 +104,10 @@
 						<div class="col-sm-5 col-xs-12 row-image-container-lg">
 							{% if rowLink %}
 								<a href="{{ rowLink }} ">
-									<img class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
+									<img alt="{{item.entity.field_row_layout_content_image.entity.field_media_image.alt}}" class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
 								</a>
 							{% else %}
-								<img class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
+								<img alt="{{item.entity.field_row_layout_content_image.entity.field_media_image.alt}}" class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
 							{% endif %}
 						</div>
 						{% endif %}
@@ -119,18 +118,23 @@
 		{% elseif layoutSelection == 2 %}
 			{% for key, item in content['#block_content'].field_row_layout_content %}
 				{% set rowLink = item.entity.field_row_layout_content_link.0.url|render %}
-				<div class="row d-flex row-content">
+				{% set tileBackground = "height:100%;background-image:url('" ~ file_url(item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square')) ~ "');background-repeat:no-repeat;background-position:center;background-size:cover;" %}
+				<div class="row d-flex row-content-tiles">
 					{% if (loop.index is odd) %}
-						<div class="col-6 row-image-container">
+						<div class="col-6 row-image-container-tile-odd">
 							{% if rowLink %}
 								<a href="{{ rowLink }} ">
-									{{ item.entity.field_row_layout_content_image|view }}
+									{# TO DO -- Make this a DIV with background img #}
+									{# {{ item.entity.field_row_layout_content_image|view }} #}
+									<div class="ucb-content-row-left" style={{tileBackground}}></div>
 								</a>
 							{% else %}
-								{{ item.entity.field_row_layout_content_image|view }}
+								{# TO DO -- Make this a DIV with background img #}
+								{# {{ item.entity.field_row_layout_content_image|view }} #}
+								<div style={{tileBackground}}></div>
 							{% endif %}
 						</div>
-						<div class="col-6 row-text-container">
+						<div class="col-6 row-text-container-tile">
 							{% if rowLink %}
 								<a href="{{ rowLink }} ">
 									<h3>{{item.entity.field_row_layout_content_title.0.value }}</h3>
@@ -141,7 +145,7 @@
 							{{item.entity.field_row_layout_content_text|view}}
 						</div>
 					{% else %}
-						<div class="col-6 row-text-container">
+						<div class="col-6 row-text-container-tile">
 							{% if rowLink %}
 								<a href="{{ rowLink }} ">
 									<h3>{{item.entity.field_row_layout_content_title.0.value }}</h3>
@@ -151,13 +155,17 @@
 							{% endif %}
 							{{item.entity.field_row_layout_content_text|view}}
 						</div>
-						<div class="col-6 row-image-container">
+						<div class="col-6 row-image-container-tile-even">
 							{% if rowLink %}
 								<a href="{{ rowLink }} ">
-									{{ item.entity.field_row_layout_content_image|view }}
+									{# TO DO -- Make this a DIV with background img #}
+									{# {{ item.entity.field_row_layout_content_image|view }} #}
+									<div style="{{tileBackground}}"></div>
 								</a>
 							{% else %}
-								{{ item.entity.field_row_layout_content_image|view }}
+								{# TO DO -- Make this a DIV with background img #}
+								{# {{ item.entity.field_row_layout_content_image|view }} #}
+								<div style="{{tileBackground}}"></div>
 							{% endif %}
 						</div>
 					{% endif %}
@@ -234,7 +242,7 @@
 				<div class="col-lg-4 col-md-6 col-sm-12 row-image-container-lg">
 					{% if rowLink %}
 						<a href="{{ rowLink }} ">
-							<img class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
+							<img alt="{{item.entity.field_row_layout_content_image.entity.field_media_image.alt}}" class="ucb-content-row-img-lg" src="{{item.entity.field_row_layout_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_wide')}}"></img>
 						</a>
 					{% else %}
 						{{ image|view }}
