Adjusts Large Alternate responsive display to place image on top of content on small screen

--- a/css/block/content-row.css
+++ b/css/block/content-row.css
@@ -143,3 +143,9 @@
     padding-right: 0;
   }
 }
+@media screen and (max-width: 576px) {
+  .ucb-teaser-lg-row-even{
+    flex-direction: column-reverse;
+  }
+}
+
